[tool.poetry]
name = "redelay-examples"
version = "0.1.0"
description = ""
authors = ["Rodrigo Corrêa <rcelha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
hiredis = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
